bug fixes and tests
